# BootanicalGardens

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
doc/: brainstorm.md
res/: BooLib.glsl  basic.frag  basic.vert  default.frag  default.vert  gradient.comp  graphicsData.json
res/levels/: Level1.json
res/meshes/: goggles.glb  hose.glb  leather.glb  lenses.glb  metal.glb  rubberwood.glb
res/shaders/: BooLib.glsl  default.frag  default.vert  deferred.frag  deferred.vert  gbuffer.frag  gbuffer.vert  shadow.vert
res/textures/FlightHelmet/GlassPlastic/: albedo.exr  normal.exr
res/textures/FlightHelmet/Lenses/: albedo.exr  normal.exr  occlusionRoughnessMetallic.exr
src/: Component.cpp  Component.hpp  DescriptorAllocator.cpp  DescriptorAllocator.hpp  Entity.cpp  Entity.hpp  GraphicsDevice.cpp  GraphicsInstance.hpp  Image.cpp  Pipeline.cpp  Pipeline.hpp  RenderPass.cpp  RenderPass.hpp  Renderer.cpp  Resource.cpp  Resource.hpp  Shader.cpp  Shader.hpp  ShaderUsage.cpp  ShaderUsage.hpp  Window.cpp
src/Filesystem/: UpdateListener.cpp  UpdateListener.hpp
src/Game/: Game.cpp  Game.hpp  LevelParser.cpp  LevelParser.hpp  Time.cpp  Time.hpp
src/Game/Components/: Plant.cpp  Plant.hpp  PlayerController.cpp  PlayerController.hpp
src/InputEngine/: Input.cpp  Input.hpp  KeyboardController.cpp  KeyboardController.hpp
src/RenderEngine/: Buffer.cpp  Buffer.hpp  CommandBuffer.cpp  CommandBuffer.hpp  DescriptorAllocator.cpp  DescriptorAllocator.hpp  DescriptorSetAllocator.cpp  DescriptorSetAllocator.hpp  DescriptorSetRequirements.cpp  DescriptorSetRequirements.hpp  DescriptorSetRequirer.cpp  DescriptorSetRequirer.hpp  Framebuffer.cpp  Framebuffer.hpp  GraphicsDevice.cpp  GraphicsDevice.hpp  GraphicsInstance.cpp  GraphicsInstance.hpp  Image.cpp  Image.hpp  Pipeline.cpp  Pipeline.hpp  RenderGraph.cpp  RenderGraph.hpp  RenderPass.cpp  RenderPass.hpp  Renderer.cpp  Renderer.hpp  Resource.hpp  Shader.cpp  Shader.hpp  ShaderUsage.cpp  ShaderUsage.hpp  StagingBuffer.cpp  StagingBuffer.hpp  View.hpp  Window.cpp  Window.hpp
src/RenderEngine/MeshGroup/: Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  MeshGroup.cpp  MeshGroup.hpp  Texture.cpp  Texture.hpp  Vertex.cpp  Vertex.hpp
src/RenderEngine/Pipeline/: FragmentProcess.cpp  FragmentProcess.hpp  Pipeline.cpp  Pipeline.hpp  Shader.cpp  Shader.hpp  VertexProcess.cpp  VertexProcess.hpp
src/RenderEngine/RenderPass/: CollectShadowsRenderPass.cpp  CollectShadowsRenderPass.hpp  GBufferRenderPass.cpp  GBufferRenderPass.hpp  OpaqueRenderPass.cpp  OpaqueRenderPass.hpp  RenderPass.cpp  RenderPass.hpp  ShadowRenderPass.cpp  ShadowRenderPass.hpp
src/RenderEngine/Renderable/: Instance.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  MeshGroup.cpp  MeshGroup.hpp  Renderable.cpp  Renderable.hpp  Texture.cpp  Texture.hpp  Vertex.cpp  Vertex.hpp
src/RenderEngine/Resources/: Buffer.cpp  Buffer.hpp  Image.cpp  Image.hpp  Resource.cpp  Resource.hpp  StagingBuffer.cpp  StagingBuffer.hpp  UniformBuffer.hpp
src/Tools/: ClassName.h  Hashing.hpp  Hive.hpp  StringHash.h
src/Tools/Json/: Json.hpp  Json_glm.cpp  Json_glm.hpp
